2017-03-27  Karl Berry  <karl@freefriends.org>

	* Makefile.am (AM_TESTS_ENVIRONMENT): use instead of TESTS_ENVIRONMENT.

2016-04-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* Delete the directory dvi2tty-PATCHES/ because upstream
	has been changed and the TeX Live svn repository is now
	synchronizing with the upstream.

2016-03-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	dvi2tty-6.0.0.
	Support T1,TS1,OT2,T2A,T2B,T2C,X2 encodings.
	Add utf8 output for the latin, cyrillic encodings and
	OML,OMS encodings.
	Add option '-C' not to compose a combining character sequence.
	* dvi2tty.c, dvi2tty.h: Add new option '-C', '-Eu1' and inner flags.
	* tex2ucs.h (new), dvistuff.c: Add utf8 support and new encodings.
	* test/table.tex, table.dvi, dvi2tty.test: Add a new test.
	* table{,c,s,u,uC,Eu,Eu1,EuC,Eua}.tty,
	  testEu.tty, ligtest{u,Eu}.tty (new);
	  test{,s,u}.tty, ligtest.tty (update): Expected output.
	* Makefile{,.am,.in}: Add the new test and the new header file.
	* configure{,.ac}: Update version number.

2016-02-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Makefile.am, configure.ac: New convention.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-01-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Allow subdir-objects.

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-04-25  Peter Breitenlohner   <peb@mppmu.mpg.de>

	* dvi2tty.test: Add a copyright statement.
	* disdvi.test: New shell script for 'make check' test.
	* ligtest.dis (new): Expected test output.
	* Makefile.am: Add the new test.

2011-11-21  Peter Breitenlohner   <peb@mppmu.mpg.de>

	Add upTeX support from Tanaka Takuji <KXD02663@nifty.ne.jp>.